[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/BrewingPhases.gd" id="1_brewing"]

[node name="BrewingPhases" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_brewing")

[node name="DimOverlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.059, 0.09, 0.141, 0.6)

[node name="CardPanel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -300.0
offset_right = 450.0
offset_bottom = 300.0

[node name="MarginContainer" type="MarginContainer" parent="CardPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBox" type="VBoxContainer" parent="CardPanel/MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="CardPanel/MarginContainer/VBox"]
text = "BREWING PHASES"
theme_override_font_sizes/font_size = 32

[node name="HSeparator" type="HSeparator" parent="CardPanel/MarginContainer/VBox"]

[node name="Hint" type="Label" parent="CardPanel/MarginContainer/VBox"]
text = "Adjust effort across brewing phases. More effort = better scores."
autowrap_mode = 2

[node name="MashingRow" type="VBoxContainer" parent="CardPanel/MarginContainer/VBox"]
theme_override_constants/separation = 4

[node name="MashingTitle" type="Label" parent="CardPanel/MarginContainer/VBox/MashingRow"]
text = "MASHING"
theme_override_font_sizes/font_size = 24

[node name="MashingSubtitle" type="Label" parent="CardPanel/MarginContainer/VBox/MashingRow"]
text = "Mash Temperature"
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.541, 0.608, 0.694, 1)

[node name="MashingSliderRow" type="HBoxContainer" parent="CardPanel/MarginContainer/VBox/MashingRow"]
theme_override_constants/separation = 8

[node name="MashingMin" type="Label" parent="CardPanel/MarginContainer/VBox/MashingRow/MashingSliderRow"]
text = "62°C"
theme_override_font_sizes/font_size = 16

[node name="MashingSlider" type="HSlider" parent="CardPanel/MarginContainer/VBox/MashingRow/MashingSliderRow"]
size_flags_horizontal = 3
min_value = 62.0
max_value = 69.0
step = 1.0
value = 65.0
tick_count = 8
ticks_on_borders = true
custom_minimum_size = Vector2(0, 32)

[node name="MashingMax" type="Label" parent="CardPanel/MarginContainer/VBox/MashingRow/MashingSliderRow"]
text = "69°C"
theme_override_font_sizes/font_size = 16

[node name="MashingValue" type="Label" parent="CardPanel/MarginContainer/VBox/MashingRow"]
text = "65°C"
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="BoilingRow" type="VBoxContainer" parent="CardPanel/MarginContainer/VBox"]
theme_override_constants/separation = 4

[node name="BoilingTitle" type="Label" parent="CardPanel/MarginContainer/VBox/BoilingRow"]
text = "BOILING"
theme_override_font_sizes/font_size = 24

[node name="BoilingSubtitle" type="Label" parent="CardPanel/MarginContainer/VBox/BoilingRow"]
text = "Boil Duration"
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.541, 0.608, 0.694, 1)

[node name="BoilingSliderRow" type="HBoxContainer" parent="CardPanel/MarginContainer/VBox/BoilingRow"]
theme_override_constants/separation = 8

[node name="BoilingMin" type="Label" parent="CardPanel/MarginContainer/VBox/BoilingRow/BoilingSliderRow"]
text = "30 min"
theme_override_font_sizes/font_size = 16

[node name="BoilingSlider" type="HSlider" parent="CardPanel/MarginContainer/VBox/BoilingRow/BoilingSliderRow"]
size_flags_horizontal = 3
min_value = 30.0
max_value = 90.0
step = 10.0
value = 60.0
tick_count = 7
ticks_on_borders = true
custom_minimum_size = Vector2(0, 32)

[node name="BoilingMax" type="Label" parent="CardPanel/MarginContainer/VBox/BoilingRow/BoilingSliderRow"]
text = "90 min"
theme_override_font_sizes/font_size = 16

[node name="BoilingValue" type="Label" parent="CardPanel/MarginContainer/VBox/BoilingRow"]
text = "60 min"
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="FermentingRow" type="VBoxContainer" parent="CardPanel/MarginContainer/VBox"]
theme_override_constants/separation = 4

[node name="FermentingTitle" type="Label" parent="CardPanel/MarginContainer/VBox/FermentingRow"]
text = "FERMENTING"
theme_override_font_sizes/font_size = 24

[node name="FermentingSubtitle" type="Label" parent="CardPanel/MarginContainer/VBox/FermentingRow"]
text = "Fermentation Temperature"
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.541, 0.608, 0.694, 1)

[node name="FermentingSliderRow" type="HBoxContainer" parent="CardPanel/MarginContainer/VBox/FermentingRow"]
theme_override_constants/separation = 8

[node name="FermentingMin" type="Label" parent="CardPanel/MarginContainer/VBox/FermentingRow/FermentingSliderRow"]
text = "15°C"
theme_override_font_sizes/font_size = 16

[node name="FermentingSlider" type="HSlider" parent="CardPanel/MarginContainer/VBox/FermentingRow/FermentingSliderRow"]
size_flags_horizontal = 3
min_value = 15.0
max_value = 25.0
step = 1.0
value = 20.0
tick_count = 11
ticks_on_borders = true
custom_minimum_size = Vector2(0, 32)

[node name="FermentingMax" type="Label" parent="CardPanel/MarginContainer/VBox/FermentingRow/FermentingSliderRow"]
text = "25°C"
theme_override_font_sizes/font_size = 16

[node name="FermentingValue" type="Label" parent="CardPanel/MarginContainer/VBox/FermentingRow"]
text = "20°C"
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="PreviewPanel" type="PanelContainer" parent="CardPanel/MarginContainer/VBox"]

[node name="PreviewHBox" type="HBoxContainer" parent="CardPanel/MarginContainer/VBox/PreviewPanel"]
theme_override_constants/separation = 32

[node name="FlavorLabel" type="Label" parent="CardPanel/MarginContainer/VBox/PreviewPanel/PreviewHBox"]
text = "Flavor: 75"
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="TechniqueLabel" type="Label" parent="CardPanel/MarginContainer/VBox/PreviewPanel/PreviewHBox"]
text = "Technique: 75"
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="FooterRow" type="HBoxContainer" parent="CardPanel/MarginContainer/VBox"]
alignment = 2

[node name="BrewButton" type="Button" parent="CardPanel/MarginContainer/VBox/FooterRow"]
text = "Brew!"
theme_override_font_sizes/font_size = 24
custom_minimum_size = Vector2(150, 44)
